# pydantic-stream

./: Makefile  README.MD  pyproject.toml
.github/workflows/: code-quality-and-tests.yaml
pydantic_stream/: __init__.py  exceptions.py  model.py
tests/: conftest.py  test_http.py  test_streming_model.py
